changed swagger and updated routes
